@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Support for exact::class by setting up cor/nocor feature keywords
 
 1.20      2023-08-18 15:29:54-07:00 America/Los_Angeles
         - Update for Perl 5.38 and beyond
